[package]
name = "xray"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "AWS XRay client for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "tracing", "distributed-tracing"]
readme = "README.md"
documentation = "https://softprops.github.io/xray"
homepage = "https://github.com/softprops/xray"
repository = "https://github.com/softprops/xray"

[dependencies]
rand = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = "0.1"