[package]
name = "xray-rusoto"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "Rusoto integration with AWS X-Ray"
license = "MIT"
keywords = ["aws", "x-ray", "tracing", "distributed-tracing"]
readme = "../README.md"
documentation = "https://docs.rs/xray-header"
homepage = "https://github.com/softprops/xray"
repository = "https://github.com/softprops/xray"


[dependencies]
futures = "0.1"
rusoto_core = "0.36"
xray = { version = "0.0.0", path = "../xray" }

[dev-dependencies]
rusoto_dynamodb = "0.36"
tokio = "0.1"