[package]
name = "xray"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "AWS X-Ray daemon client for Rust"
license = "MIT"
keywords = ["aws", "x-ray", "tracing", "distributed-tracing"]
readme = "../README.md"
documentation = "https://docs.rs/xray"
homepage = "https://github.com/softprops/xray"
repository = "https://github.com/softprops/xray"

[dependencies]
failure = "0.1"
log = "0.4"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"